@@ -9,6 +9,9 @@
 	* src/kwset.c (kwsprep): Move three variable declarations to
 	  the single {}-block where they are used.
 
+	* src/kwset.c (kwsprep): Optimize search for mind2 value by
+	  starting from the end of the target[] array.
+
 2005-06-22  Charles Levert  <charles_levert@gna.org>
 
 	* grep/autogen.sh, grep/src/Makefile.am, grep/tests/backref.sh,
